# quilt-mcp-server

./: .dockerignore  .gitignore  .markdownlint.json  .runme.yaml  .yamllint.yml  ADMIN_ACTIONS_IMPLEMENTATION_REVIEW.md  ADMIN_TOOL_BROWSER_TEST_COMPLETE.md  ADMIN_TOOL_COMPLETE_TEST_REPORT.md  ADMIN_TOOL_DEPLOYMENT_SUMMARY.md  ADMIN_TOOL_SUMMARY.md  AGENTS.md  API_USAGE_PATTERNS.md  ATHENA_FIXES.md  ATHENA_HYPHENATED_DB_FIX.md  ATHENA_QUERY_HISTORY_ANALYSIS.md  ATHENA_TABULATOR_PERMISSIONS_ANALYSIS.md  AUTHENTICATION_FLOW.md  BACKEND_JWT_PROCESSING_BUG.md  BACKEND_ROUTING_REQUIRED.md  BUCKET_ACTIONS_FIXABILITY_ANALYSIS.md  BUCKET_CLEANUP_SUMMARY.md  BUCKET_FILTERING_AND_TABULATOR_FIX.md  BUCKET_INVESTIGATION_SUMMARY.md  BUCKET_TOOLS_BACKEND_PROXY_SOLUTION.md  BUCKET_TOOLS_VERIFICATION.md  BUCKET_UPLOAD_RESEARCH.md  CHANGELOG.md  CLAUDE.md  CODEX_VISUALIZATION_REVIEW.md  CODE_QUALITY_ASSESSMENT.md  COMPREHENSIVE_ACTION_TESTING.md  COMPREHENSIVE_CURL_TEST_RESULTS.md  COMPREHENSIVE_TESTING_FINAL_SUMMARY_v0.6.75.md  COMPREHENSIVE_TESTING_PLAN_v0.6.74.md  COMPREHENSIVE_TEST_PLAN_AND_INVENTORY.md  CREDENTIAL_EXTRACTION_FIX_v0.6.75.md  CRITICAL_FRONTEND_NOT_SENDING_JWT.md  CURL_TESTS_RESULTS.md  CUSTOMER_PROMPTS_GUIDE.md  DEPLOY.md  (+173 more)
.aws-sam/: build.toml
.bmad-core/: install-manifest.yaml  user-guide.md  working-in-the-brownfield.md
.claude/: permissions.json
.claude_code/: config.json
.github/: BRANCH_PROTECTION.md
analysis/: CI_SUCCESS_SUMMARY.md  ENABLE_SKIPPED_TESTS.md  FINAL_SUCCESS_SUMMARY.md  UNIFIED_SEARCH_SUMMARY.md
app/: Makefile  Makefile.backup  SPEC.md  app  app.sh  main.py  test_visualization.py
build-docker/: Makefile
build-dxt/: .gitignore  Makefile
catalog-push/: Makefile
configs/: athena-glue-policy.json  permission_mapping.json  real_mcp_validation_report.json
deploy/: README.md  deploy.sh  ecs-fargate.yml  ecs-task-definition.json  quilt_mcp_stack.py
deploy-aws/: SPEC.md  cdk.context.json
docs/: ABOUT.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  AUTHENTICATION.md  AWS_INTEGRATION_TESTING.md  BRANCHING_STRATEGY.md  CHANGELOG_PERMISSION_SCHEME.md  CLAUDE.md  CUSTOMER_PROMPTS.md  CUSTOMER_PROMPTS_GUIDE.md  DEBUGGING_JWT_FRONTEND.md  DOCKER_RELEASE.md  DOCKER_RELEASE_SUMMARY.md  DOMAIN_OBJECTS.md  ENHANCEMENT_ISSUES.md  ERROR_HANDLING.md  FRONTEND_INTEGRATION_TROUBLESHOOTING.md  GRAPHQL_PERFORMANCE_ANALYSIS.md  JWT_ARCHITECTURE.md  JWT_DELTAS.md  JWT_MERGE.md  JWT_TESTING.md  MANUAL_VERIFICATION.md  MCPB_FAQ.md  MCP_OPTIMIZATION.md  MIGRATION_DXT_TO_MCPB.md  MIGRATION_GUIDE_MODULE_TOOLS.md  MULTI_USER_LIMITATIONS.md  PACKAGE_CREATION_WORKFLOW.md  PERMISSIONS_FIX_SUMMARY.md  QUILTOPS_API.md  QUILT_SUMMARY_FORMAT.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_COMPLETION_REPORT.md  RELEASE_NOTES_MCPB.md  REPOSITORY.md  SEARCH_TROUBLESHOOTING.md  STATELESS_TESTING.md  TEMPORARY_FIXES.md  (+10 more)
entry_points/: dev_server.py  stdio_server.py
packager/: package-lambda.sh  run-lambda.sh  template.yaml  test-event-tools-list-1754805525.json  test-event.json  test-lambda.sh
quilt/: DEPLOY.md  README.md  __init__.py  claude_desktop_config.json  constants.py  lambda_handler.py  main.py  pyproject.toml  quilt.py  remote.py  requirements.txt  test_quilt.py
scripts/:  quilt_mcp_tools_list.py  build.sh  cdk-deploy.sh  cellxgene-mcp-wrapper.sh  check-dev.sh  check-env.sh  check-logs.sh  check_all_readme.py  check_cycles.py  check_image_arch.py  check_logs.sh  common.sh  compare_jwt_secrets.py  coverage_analysis.py  debug_health.sh  debug_permissions.py  demo_coverage_validation.py  demo_unified_search.py  detect_cycles.py  diagnose-mcp-protocol.py  discover_elasticsearch_indices.py  docker.py  docker.sh  docker_image.py  docker_manager.py  ecs_deploy.py  find_mock_only_tests.py  generate_canonical_tools.py  generate_test_jwt.py  get_token.sh  healthcheck.py  inspect-tool-schema.py  inspector-http.sh  list_all_indices.py  logs.sh  make_mcp_config.py  mcp-list.py  mcp-test-runner.py  mcp-test-setup.py  mcp-test.py  (+41 more)
shared/: common.sh  test-endpoint.sh  test-tools.json  tunnel-endpoint.sh
spec/: 0-main-spec.md  10-athena-glue-spec.md  10-bug-report-issue-template-spec.md  10-unified-search-architecture-spec.md  105-ruff-lint.md  11-tabulator-spec.md  13-mcp-optimization-spec.md  141-fix-makefiles-analysis.md  173-consolidate-scripts-folder.md  2-build-docker-spec.md  2025-09-11-fix-timeouts.md  2025-10-01-qurator-backend-mcp-auth.md  251-folder-cleanup.md  3-catalog-push-spec.md  5-dxt-reqs.md  5-dxt-spec.md  6-auth-reqs.md  6-auth-spec.md  7-s3-package-spec.md  8-permissions-discovery-spec.md  9-automatic-visualization-generation-spec.md  AGENTS.md  README.md  WORKFLOW.md  a01-bug-report-issue-template-spec.md  a02-auto-configure-mcp-server-spec.md  a02-github-actions-optimal-structure.md  a02-github-checklist.md  a02-integration-test-failures.md  a03-release-version.md  a04-auto-coverage.md  a05-slow-test-speedup.md  a06-admin-resources.md  a10-no-default-registry.md  a23-list-buckets.md  mcp-unified-auth-implementation-spec.md  quilt_mcp_tools - quilt_mcp_tools.csv  unified-auth-architecture-diagram.md  unified-mcp-authentication-strategy.md
src/: main.py
test_cases/: ccle_computational_biology_test_runner.py  mcp_test_results.json  test_case_adjustments_summary.md
test_results/: mock_llm_mcp_test_results.json
tests/: conftest.py  generate_lambda_events.py  helpers.py  jwt_helpers.py  local_jwt_test.py  setup-github-secrets-auto.sh  setup-github-secrets.sh  test-endpoint.sh  test_athena_glue.py  test_athena_smoke.py  test_auto_configure.py  test_bucket_tools.py  test_buckets_migration.py  test_cdk_stack.py  test_cdk_stack_simplified.py  test_ci_coverage_split.py  test_client_compatibility.py  test_conditional_tools.py  test_config_base.py  test_config_quilt3.py  test_core_processor.py  test_coverage_analysis.py  test_coverage_summary.py  test_coverage_tools.py  test_elasticsearch_escaping.py  test_error_recovery.py  test_filter_integration.py  test_filter_parser.py  (+54 more)
weather/: claude_desktop_config.json  pyproject.toml  test_weather.py
(+1626 files in other folders)
