[project]
name = "quilt-mcp"
version = "0.15.0"
description = "Secure MCP server for accessing Quilt data with IAM or JWT authentication"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Quilt Data", email = "support@quilt.bio"}
]
maintainers = [
    {name = "Quilt Data", email = "support@quilt.bio"}
]
keywords = ["mcp", "model-context-protocol", "claude", "quilt", "data", "analytics", "science", "server", "aws", "s3", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "quilt3>=5.6.0",
    "fastmcp>=2.12.4",
    "mcp>=1.12.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "cachetools>=5.3.0",
    "PyJWT>=2.8.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "altair>=5.0.0",
    "pysam>=0.21.0",
    "biopython>=1.81",
    "pybedtools>=0.9.0",
    "pybigwig>=0.3.18",
    "sqlalchemy>=2.0.0",
    "pyathena>=3.0.0",
    "PyYAML>=6.0.0",
    "requests-futures>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/quiltdata/quilt-mcp-server"
Repository = "https://github.com/quiltdata/quilt-mcp-server"
Issues = "https://github.com/quiltdata/quilt-mcp-server/issues"
Documentation = "https://github.com/quiltdata/quilt-mcp-server/blob/main/README.md"

[project.scripts]
quilt-mcp = "quilt_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quilt_mcp*"]
exclude = ["shared", "scripts"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=82,<82.1", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "quilt3>=5.6.0",
    "quiltx>=0.3.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]
deploy = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",
    "types-cachetools>=5.3.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "quiltx>=0.3.0",  # Required for type checking tool_classifier.py
]
dev = [
    "pytest-xdist>=3.8.0",
    "wheel>=0.45.1",
    "build>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --color=yes"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "platform: marks tests that require platform authentication (deselect with '-m \"not platform\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
# Use external configuration file
config = "ruff.toml"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

# Allow gradual typing - don't require all code to be typed yet
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "quilt3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# Internal utility modules - Type checking has been re-enabled for all modules below
# visualization.*: Fully typed, passes strict mypy checks (all 17 files)
# - All generators (echarts, igv, matplotlib, perspective, vega_lite) pass strict mode
# - All analyzers (data_analyzer, file_analyzer, genomic_analyzer) fully typed
# - All layouts (grid_layout) and utils fully typed
# - Core files (engine.py, __init__.py) pass strict checks
# [[tool.mypy.overrides]]
# module = "quilt_mcp.visualization.*"
# ignore_errors = true

# search_explain.py: Fully typed, passes strict mypy checks (4 errors fixed)
# - Added QueryAnalysis type annotations to all analysis parameters
# [[tool.mypy.overrides]]
# module = "quilt_mcp.search.tools.search_explain"
# ignore_errors = true

# auth_service.py: Fully typed, passes strict mypy checks (1 error fixed)
# - Removed unnecessary type: ignore comment from quilt3 import
# [[tool.mypy.overrides]]
# module = "quilt_mcp.services.auth_service"
# ignore_errors = true

# auth_metadata.py: Fully typed, passes strict mypy checks
# All type errors resolved (2 errors fixed):
# - Changed type: ignore[misc] to type: ignore[no-redef] for stub QuiltService class
# - Added type annotations to stub __init__ method: *args: object, **kwargs: object -> None
# [[tool.mypy.overrides]]
# module = "quilt_mcp.services.auth_metadata"
# ignore_errors = true

# bearer_auth_service.py: Fully typed, passes strict mypy checks
# All type errors resolved (2 errors fixed):
# - Fixed _get_secret_from_ssm return type by adding isinstance(value, str) check to narrow Any to str
# - Fixed _extract_optional_credentials return type by explicitly typing normalized dict and conditionally adding optional fields
# [[tool.mypy.overrides]]
# module = "quilt_mcp.services.bearer_auth_service"
# ignore_errors = true

# permission_discovery.py: Fully typed, passes strict mypy checks
# All type errors have been resolved (10 type errors fixed)
# - Added explicit type annotations for TTLCache instances (TTLCache[str, BucketInfo], etc.)
# - Fixed DEFAULT_BUCKET variable name conflict by renaming to DEFAULT_BUCKET_CONST
# - Added explicit return type annotation (-> None) for clear_cache method
# [[tool.mypy.overrides]]
# module = "quilt_mcp.services.permission_discovery"
# ignore_errors = true

# athena_service.py: Fully typed, passes strict mypy checks
# All type errors resolved (11 type errors fixed):
# - Added TYPE_CHECKING imports for GlueClient and S3Client type hints
# - Added return type annotations to 3 properties: glue_client, s3_client, engine
# - Added return type annotations to 2 private methods: _create_glue_client, _create_s3_client
# - Added type annotation for query_cache: TTLCache[str, Any]
# - Added type annotation for _discover_workgroup credentials parameter: Any
# - Fixed 4 return statements to explicitly cast to str using str() or explicit type annotation
# [[tool.mypy.overrides]]
# module = "quilt_mcp.services.athena_service"
# ignore_errors = true

# quilt_service.py: Fully typed and passes strict mypy checks
# [[tool.mypy.overrides]]
# module = "quilt_mcp.services.quilt_service"
# ignore_errors = true

# quilt_mcp.telemetry.* modules are now fully type-checked
# All type annotations have been verified and pass strict mypy checks


# quilt_mcp.optimization.* modules are now fully type-checked
# All type annotations have been verified and pass strict mypy checks

# quilt_mcp.version_sync: Fully typed, passes strict mypy checks
# All type errors resolved (2 errors fixed):
# - Fixed read_project_version return type using cast(str, ...) for dict lookup
# - Fixed check_version_sync_required return type using cast(str, ...) for manifest_version dict lookup

# error_recovery.py: Fully typed, passes strict mypy checks (3 errors fixed)
# - Added Literal type annotation for overall_health variable
# - Added type: ignore[import-untyped] for athena_glue import
# - Fixed missing registry argument in packages_list call
# [[tool.mypy.overrides]]
# module = "quilt_mcp.tools.error_recovery"
# ignore_errors = true
